fixed delete button & break the favsites into a component

--- a/src/assets/styles/output.css
+++ b/src/assets/styles/output.css
@@ -793,16 +793,12 @@ input {
   justify-content: center;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .divide-y-2 > :not([hidden]) ~ :not([hidden]) {
